preview fixed serial column with and align fixed

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -14,7 +14,7 @@ body {
     padding: 0 10px;
 }
 #preview {
-    z-index: 999;
+    z-index: 9999;
 }
 .content-main {
     padding-left: 200px;
